Update Lab3 PICChair and Lab3 IPSP

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "gdsfactoryplus",
   "gplugins[sax,femwell,tidy3d]~=1.4.2",
   "meow-sim",
+  "scikit-learn>=1.7.2",
 ]
 description = "Sample Photonics PDK"
 keywords = ["python"]
